# stargrind-GDmod

./: CMakeLists.txt  README.md  doc.txt  mod.json
resources/lang/: br.txt  de.txt  en.txt  es.txt  fr.txt  pl.txt  ru.txt
src/: main.cpp
src/core/: Config.hpp  Localization.cpp  Localization.hpp
src/hooks/: PlayLayerHook.hpp
src/layers/: EndGameLayer.cpp  EndGameLayer.hpp  IntroLayer.cpp  IntroLayer.hpp  SpectatorLayer.cpp  SpectatorLayer.hpp
src/logic/: GameSession.cpp  GameSession.hpp  LevelQueue.cpp  LevelQueue.hpp  Matchmaking.cpp  Matchmaking.hpp  RewardSystem.hpp  VoteSystem.cpp  VoteSystem.hpp
src/network/: API.cpp  API.hpp  P2PNetwork.cpp  P2PNetwork.hpp
src/ui/: AnimatedBackground.cpp  AnimatedBackground.hpp  CoffeeButton.cpp  CoffeeButton.hpp  LeaderboardLayer.cpp  LeaderboardLayer.hpp  LobbyLayer.cpp  LobbyLayer.hpp  MainMenuLayer.cpp  MainMenuLayer.hpp  MatchLayer.cpp  MatchLayer.hpp  ParticleSystem.cpp  ParticleSystem.hpp  SettingsLayer.cpp  SettingsLayer.hpp  StargrindButton.cpp  StargrindButton.hpp  VersusLayer.cpp  VersusLayer.hpp
src/ui/Components/: AnimatedTransition.hpp  HoverButton.cpp  HoverButton.hpp  RGBBackground.cpp  RGBBackground.hpp
src/utils/: Config.hpp  Easing.hpp
